# md2handnote

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.yaml  sample.md
fonts/: LICENSES.md  OFL-1.1.txt  README.md
md2handnote/: __init__.py  cli.py  config.py  errors.py  fonts.py  handwriting.py  layout.py  math_renderer.py  parser.py  pdf_writer.py  renderer.py  utils.py
tests/: test_layout.py  test_math_detection.py  test_parser.py
