[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2handnote"
version = "0.1.0"
description = "Convert Markdown with LaTeX math into handwritten-style lined-paper PDFs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["markdown", "pdf", "handwriting", "latex", "chinese"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "Pillow>=10",
  "PyYAML>=6",
  "PyMuPDF>=1.23",
  "reportlab>=4",
]

[project.scripts]
md2handnote = "md2handnote.cli:main"

[tool.setuptools.packages.find]
include = ["md2handnote*"]
